<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="sensor_name"
        android:title="@string/sensor_name"
        android:summary="@string/sensor_name_desc"
        android:defaultValue="DE:CC:5F:8C:51:5F"/>
    <EditTextPreference
        android:key="partner_sensor_name"
        android:title="@string/partner_sensor_name"
        android:summary="@string/partner_sensor_name_desc"
        android:defaultValue="DE:CC:5F:8C:51:5G"/>
    <EditTextPreference
        android:key="participant_number"
        android:title="@string/participant_number"
        android:summary="@string/participant_number_desc"
        android:inputType="number"/>
    <EditTextPreference
        android:key="study_number"
        android:title="@string/study_number"
        android:summary="@string/study_number_desc"
        android:inputType="number"/>
</PreferenceScreen>